--- a/help/feedback.html
+++ b/help/feedback.html
@@ -561,7 +561,7 @@
                                 the right place.
                               </div>
                               <div class="b15anq27 dir dir-ltr">
-                                <a href="/help/contact-us" class="_1dj2p4gk"
+                                <a href="/help/contact-us" class="btn-outline"
                                   >Contact us</a
                                 >
                               </div>
