--- a/help/searching-for-stays.html
+++ b/help/searching-for-stays.html
@@ -951,7 +951,7 @@
                             right place.
                           </div>
                           <div class="b15anq27 dir dir-ltr">
-                            <a href="/help/contact-us" class="_1dj2p4gk">Contact us</a>
+                            <a href="/help/contact-us" class="btn-outline">Contact us</a>
                           </div>
                           <div class="tr5dwk dir dir-ltr">
                             You can also
