--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -1512,7 +1512,7 @@
                                                     <div class="_16gyin1 ">
                                                       <div class="_12zj2wy"><a role="button" data-testid="experiences-contact-host-button"
                                                           href="/experiences/3134396?currentTab=experience_tab&amp;federatedSearchId=980d5071-b471-463d-8db8-77c0c27bf75e&amp;searchId=f9cea4e8-a387-4f32-8a6a-7fb61adec6e2&amp;sectionId=00d92247-d2bf-4f39-96ee-2fcdea1649a6&amp;source=p2&amp;modal=LEGACY_CONTACT_HOST"
-                                                          class="_1dj2p4gk">Contact hosts</a></div>
+                                                          class="btn-outline">Contact hosts</a></div>
                                                       <div class="_1b3a2fl __mobile">
                                                         <div class="_cg8a3u"><svg viewBox="0 0 24 24" role="presentation" aria-hidden="true" focusable="false"
                                                             style="height: 24px; width: 24px; display: block; fill: rgb(255, 180, 0);">
@@ -6395,7 +6395,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                     <div class="_16gyin1">
                                                       <div class="_12zj2wy"><a role="button" data-testid="experiences-contact-host-button"
                                                           href="/experiences/3134396?currentTab=experience_tab&amp;federatedSearchId=980d5071-b471-463d-8db8-77c0c27bf75e&amp;searchId=f9cea4e8-a387-4f32-8a6a-7fb61adec6e2&amp;sectionId=00d92247-d2bf-4f39-96ee-2fcdea1649a6&amp;source=p2&amp;modal=LEGACY_CONTACT_HOST"
-                                                          class="_1dj2p4gk">Contact hosts</a></div>
+                                                          class="btn-outline">Contact hosts</a></div>
                                                       <div class="_1b3a2fl">
                                                         <div class="_cg8a3u"><svg viewBox="0 0 24 24" role="presentation" aria-hidden="true" focusable="false"
                                                             style="height: 24px; width: 24px; display: block; fill: rgb(255, 180, 0);">
