--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -24353,7 +24353,7 @@
                                 </div>
                               </label>
                             </div>
-                            <div style="margin-top: 16px;"><button disabled="" type="submit" class="_1dj2p4gk">Send
+                            <div style="margin-top: 16px;"><button disabled="" type="submit" class="btn-outline">Send
                                 message</button></div>
                           </form>
                         </section>
