--- a/payments/payment-success.html
+++ b/payments/payment-success.html
@@ -243,7 +243,7 @@
                                       </button>
                                     </div>
                                     <div class="_c78vzhw">
-                                      <button type="button" class="_1dj2p4gk">
+                                      <button type="button" class="btn-outline">
                                         Skip
                                       </button>
                                     </div>
