--- a/payments/service-fee.html
+++ b/payments/service-fee.html
@@ -432,7 +432,7 @@
         </button>
       </div>
       <div class="_si3zpp">
-        <a href="/account-settings" class="_1dj2p4gk"
+        <a href="/account-settings" class="btn-outline"
           ><span class="_j1kt73">Cancel</span></a
         >
       </div>
@@ -948,7 +948,7 @@
                                                   <div class="_si3zpp">
                                                     <a
                                                       href="/account-settings"
-                                                      class="_1dj2p4gk"
+                                                      class="btn-outline"
                                                       ><span class="_j1kt73"
                                                         >Cancel</span
                                                       ></a
