--- a/help/host-liability-insurance.html
+++ b/help/host-liability-insurance.html
@@ -558,7 +558,7 @@
                               We’ll start with some questions and get you to the right place.
                             </div>
                             <div class="b15anq27 dir dir-ltr">
-                              <a href="/help/contact-us" class="_1dj2p4gk">Contact us</a>
+                              <a href="/help/contact-us" class="btn-outline">Contact us</a>
                             </div>
                             <div class="tr5dwk dir dir-ltr">
                               You can also <a href="/help/feedback" class="text-link">give us feedback.</a>
