--- a/payments/payment-success.html
+++ b/payments/payment-success.html
@@ -141,7 +141,7 @@
                                       <div class="_2h22gn">
                                         <div class="_1hpgssa1">
                                           <div class="_18raq70">
-                                            <h1 id="FMP-target" tabindex="-1" elementtiming="LCP-target" class="_14i3z6h">
+                                            <h1 id="FMP-target" tabindex="-1" elementtiming="LCP-target" class="heading">
                                               <div class="_1yrl4d7p">
                                                 <div>
                                                   Your reservation is confirmed!
@@ -225,7 +225,7 @@
                                 <div class="_11ry7lz">
                                   <section>
                                     <div class="_15c4mce">
-                                      <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                      <h2 tabindex="-1" class="heading" elementtiming="LCP-target">
                                         Have your friends join in on the fun
                                       </h2>
                                     </div>
