--- a/payments/payment.html
+++ b/payments/payment.html
@@ -11248,9 +11248,9 @@ Thank you very much and we hope you enjoy your stay!</div>
       <div class="_1t0jy5tw"></div>
       <section>
         <div class="_vxvq8x" data-testid="modal-container">
-          <div class="_z4lmgp">
+          <div class="contents">
             <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-            <div class="_z4lmgp">
+            <div class="contents">
               <div
                 role="dialog"
                 aria-label="Just a moment, we’re getting your trip ready..."
