--- a/payments/payment-success.html
+++ b/payments/payment-success.html
@@ -298,7 +298,7 @@
                                         </div>
                                       </div>
                                       <div class="_9dd4bh"></div>
-                                      <div class="_fkfey3" role="region">
+                                      <div class="my-6" role="region">
                                         <div class="_45ir4v" role="heading" aria-level="2">
                                           Reservation details
                                         </div>
