--- a/payments/payment.html
+++ b/payments/payment.html
@@ -11062,7 +11062,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                   <div class="_rrmdgl"></div>
                 </header>
                 <div class="_12kfhdn">
-                  <div class="_1p7bda">We’ll send you trip updates and a text to verify this number.<div class="_1xq6rjf">
+                  <div class="_1p7bda">We’ll send you trip updates and a text to verify this number.<div class="my-6">
                       <div class="cx1v2qp dir dir-ltr" style="border-radius: 8px;">
                         <div class="flex">
                           <div class="relative" style="flex: 1 1 0%;">
