--- a/submission/about.html
+++ b/submission/about.html
@@ -1047,7 +1047,7 @@
                             </div>
                             <div class="mb-10">
                               <div class="">
-                                <div class="margin__y-24">
+                                <div class="my-6">
                                   <fieldset class="site-content__content-fieldset" role="radiogroup">
                                     <legend class="site-content__content-menu-legend">
                                       <div class="inline">
