--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1267,7 +1267,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                             </div>
                             <div class="_uflomg">
                               <div class="">
-                                <div class="margin__y-24">
+                                <div class="my-6">
                                   <div class="_1f785j7">
                                     <div class="inline">
                                       Where will you broadcast from?
