--- a/submission/GeneralV.html
+++ b/submission/GeneralV.html
@@ -1152,7 +1152,7 @@
                               </div>
                             </div>
                             <div class="">
-                              <div class="margin__y-24">
+                              <div class="my-6">
                                 <fieldset class="site-content__content-fieldset" role="radiogroup">
                                   <legend class="site-content__content-menu-legend">
                                     <div class="inline">
