--- a/submission/expertise.html
+++ b/submission/expertise.html
@@ -1097,7 +1097,7 @@
                             </div>
                             <div class="site-content__content-wrapper-rules-radio-grp">
                               <div class="">
-                                <div class="margin__y-24">
+                                <div class="my-6">
                                   <fieldset class="site-content__content-fieldset" role="radiogroup">
                                     <legend class="site-content__content-menu-legend">
                                       <div class="inline">
